codegen/parser.output
Terminals unused in grammar

   T_Dims
   T_NewArray
   T_Switch
   T_Case
   T_Default
   CLASS
   VOID
   TRUE
   FALSE
   DECIMAL
   END
   ENDL
   TCASSIGNMENT
   TCEQ
   TCNE
   TCLT
   TCLE
   TCGT
   TCGE
   TCDOT
   EMPTYCASE
   EMPTYDEFAULT
   NONEMPTYCASE
   NONEMPTYDEFAULT


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: ClassDecl
    5     | VarDecl
    6     | FnDecl

    7 VarDecl: Variable T_Semicolon
    8        | Variable T_Slb T_IntConstant T_Srb T_Semicolon

    9 Variable: DataType T_Identifier

   10 DataType: T_Void
   11         | T_Bool
   12         | T_Int
   13         | T_Double
   14         | T_String

   15 NamedType: T_Identifier

   16 ClassDecl: T_Class T_Identifier TCLB FieldList TCRB
   17          | T_Class T_Identifier TCLB TCRB

   18 FnDecl: FnDef StmtBlock

   19 FieldList: FieldList VarDecl
   20          | FieldList FnDecl
   21          | FieldList Stmt
   22          | VarDecl
   23          | FnDecl
   24          | Stmt

   25 Formals: FormalsList
   26        | %empty

   27 FormalsList: Variable
   28            | FormalsList ',' Variable

   29 FnDef: DataType T_Identifier '(' Formals ')'

   30 StmtBlock: TCLB VarDeclList StmtList TCRB
   31          | TCLB VarDeclList TCRB
   32          | TCLB StmtList TCRB
   33          | TCLB TCRB

   34 StmtList: StmtList Stmt
   35         | Stmt

   36 VarDeclList: VarDeclList VarDecl
   37            | VarDecl

   38 Stmt: OptExpr T_Semicolon
   39     | T_While '(' Expr ')' Stmt
   40     | T_Return ';'
   41     | T_Return Expr ';'
   42     | T_Break ';'
   43     | T_Print '(' ExprList ')' ';'
   44     | T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt
   45     | IfStmt
   46     | StmtBlock

   47 OptExpr: Expr
   48        | %empty

   49 IfStmt: T_If '(' Expr ')' Stmt
   50       | T_If '(' Expr ')' Stmt T_Else Stmt

   51 ExprList: ExprList ',' Expr
   52         | Expr

   53 Expr: LValue
   54     | Call
   55     | Constant
   56     | Expr T_Or Expr
   57     | Expr T_And Expr
   58     | Expr '<' Expr
   59     | Expr '>' Expr
   60     | Expr T_GreaterEqual Expr
   61     | Expr T_LessEqual Expr
   62     | Expr T_Equal Expr
   63     | Expr T_NotEqual Expr
   64     | Expr T_Add Expr
   65     | Expr T_Sub Expr
   66     | Expr T_Mul Expr
   67     | Expr T_Div Expr
   68     | Expr T_Mod Expr
   69     | Expr '^' Expr
   70     | Expr '|' Expr
   71     | Expr '&' Expr
   72     | Expr T_LeftShift Expr
   73     | Expr T_RightShift Expr
   74     | '-' Expr
   75     | '!' Expr
   76     | '~' Expr
   77     | Expr T_Incr
   78     | Expr T_Decr
   79     | '(' Expr ')'
   80     | '"' Expr '"'
   81     | T_New NamedType
   82     | LValue T_SingleEqual Expr

   83 Call: T_Identifier T_Pl Actuals T_Pr
   84     | T_Call T_Pl Expr callout_args T_Pr
   85     | Expr '.' T_Identifier '(' Actuals ')'

   86 callout_args: %empty
   87             | callout_args T_Comma callout_args_sub

   88 callout_args_sub: %empty
   89                 | Expr

   90 Actuals: ExprList
   91        | %empty

   92 LValue: T_Identifier
   93       | Expr '.' T_Identifier
   94       | Expr T_Slb Expr T_Srb

   95 Constant: T_IntConstant
   96         | T_DoubleConstant
   97         | T_BoolConstant
   98         | T_StringConstant
   99         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 75
'"' (34) 80
'&' (38) 71
'(' (40) 29 39 43 44 49 50 79 85
')' (41) 29 39 43 44 49 50 79 85
',' (44) 28 51
'-' (45) 74
'.' (46) 85 93
';' (59) 40 41 42 43 44
'<' (60) 58
'>' (62) 59
'^' (94) 69
'|' (124) 70
'~' (126) 76
error (256)
T_Void (258) 10
T_Bool (259) 11
T_Int (260) 12
T_Double (261) 13
T_String (262) 14
T_Class (263) 16 17
T_LessEqual (264) 61
T_GreaterEqual (265) 60
T_Equal (266) 62
T_NotEqual (267) 63
T_Dims (268)
T_SingleEqual (269) 82
T_LeftShift (270) 72
T_RightShift (271) 73
T_And (272) 57
T_Or (273) 56
T_Null (274) 99
T_While (275) 39
T_For (276) 44
T_If (277) 49 50
T_Else (278) 50
T_Return (279) 40 41
T_Break (280) 42
T_New (281) 81
T_NewArray (282)
T_Print (283) 43
T_Switch (284)
T_Case (285)
T_Default (286)
T_Incr (287) 77
T_Decr (288) 78
CLASS (289)
T_Call (290) 84
VOID (291)
TRUE (292)
FALSE (293)
DECIMAL (294)
T_Semicolon (295) 7 8 38
END (296)
ENDL (297)
TCASSIGNMENT (298)
TCEQ (299)
TCNE (300)
TCLT (301)
TCLE (302)
TCGT (303)
TCGE (304)
T_Pl (305) 83 84
T_Pr (306) 83 84
TCLB (307) 16 17 30 31 32 33
TCRB (308) 16 17 30 31 32 33
T_Srb (309) 8 94
T_Slb (310) 8 94
T_Comma (311) 87
TCDOT (312)
T_Add (313) 64
T_Sub (314) 65
T_Mul (315) 66
T_Div (316) 67
T_Mod (317) 68
T_StringConstant (318) 98
T_Identifier (319) 9 15 16 17 29 83 85 92 93
T_IntConstant (320) 8 95
T_DoubleConstant (321) 96
T_BoolConstant (322) 97
NEG (323)
NOELSE (324)
EMPTYCASE (325)
EMPTYDEFAULT (326)
NONEMPTYCASE (327)
NONEMPTYDEFAULT (328)


Nonterminals, with rules where they appear

$accept (88)
    on left: 0
Program (89)
    on left: 1, on right: 0
DeclList (90)
    on left: 2 3, on right: 1 2
Decl (91)
    on left: 4 5 6, on right: 2 3
VarDecl (92)
    on left: 7 8, on right: 5 19 22 36 37
Variable (93)
    on left: 9, on right: 7 8 27 28
DataType (94)
    on left: 10 11 12 13 14, on right: 9 29
NamedType (95)
    on left: 15, on right: 81
ClassDecl (96)
    on left: 16 17, on right: 4
FnDecl (97)
    on left: 18, on right: 6 20 23
FieldList (98)
    on left: 19 20 21 22 23 24, on right: 16 19 20 21
Formals (99)
    on left: 25 26, on right: 29
FormalsList (100)
    on left: 27 28, on right: 25 28
FnDef (101)
    on left: 29, on right: 18
StmtBlock (102)
    on left: 30 31 32 33, on right: 18 46
StmtList (103)
    on left: 34 35, on right: 30 32 34
VarDeclList (104)
    on left: 36 37, on right: 30 31 36
Stmt (105)
    on left: 38 39 40 41 42 43 44 45 46, on right: 21 24 34 35 39 44
    49 50
OptExpr (106)
    on left: 47 48, on right: 38 44
IfStmt (107)
    on left: 49 50, on right: 45
ExprList (108)
    on left: 51 52, on right: 43 51 90
Expr (109)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82, on right: 39 41 44 47 49 50
    51 52 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 82 84 85 89 93 94
Call (110)
    on left: 83 84 85, on right: 54
callout_args (111)
    on left: 86 87, on right: 84 87
callout_args_sub (112)
    on left: 88 89, on right: 87
Actuals (113)
    on left: 90 91, on right: 83 85
LValue (114)
    on left: 92 93 94, on right: 53 82
Constant (115)
    on left: 95 96 97 98 99, on right: 55


State 0

    0 $accept: . Program $end

    T_Void    shift, and go to state 1
    T_Bool    shift, and go to state 2
    T_Int     shift, and go to state 3
    T_Double  shift, and go to state 4
    T_String  shift, and go to state 5
    T_Class   shift, and go to state 6

    Program    go to state 7
    DeclList   go to state 8
    Decl       go to state 9
    VarDecl    go to state 10
    Variable   go to state 11
    DataType   go to state 12
    ClassDecl  go to state 13
    FnDecl     go to state 14
    FnDef      go to state 15


State 1

   10 DataType: T_Void .

    $default  reduce using rule 10 (DataType)


State 2

   11 DataType: T_Bool .

    $default  reduce using rule 11 (DataType)


State 3

   12 DataType: T_Int .

    $default  reduce using rule 12 (DataType)


State 4

   13 DataType: T_Double .

    $default  reduce using rule 13 (DataType)


State 5

   14 DataType: T_String .

    $default  reduce using rule 14 (DataType)


State 6

   16 ClassDecl: T_Class . T_Identifier TCLB FieldList TCRB
   17          | T_Class . T_Identifier TCLB TCRB

    T_Identifier  shift, and go to state 16


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 17


State 8

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void    shift, and go to state 1
    T_Bool    shift, and go to state 2
    T_Int     shift, and go to state 3
    T_Double  shift, and go to state 4
    T_String  shift, and go to state 5
    T_Class   shift, and go to state 6

    $default  reduce using rule 1 (Program)

    Decl       go to state 18
    VarDecl    go to state 10
    Variable   go to state 11
    DataType   go to state 12
    ClassDecl  go to state 13
    FnDecl     go to state 14
    FnDef      go to state 15


State 9

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 10

    5 Decl: VarDecl .

    $default  reduce using rule 5 (Decl)


State 11

    7 VarDecl: Variable . T_Semicolon
    8        | Variable . T_Slb T_IntConstant T_Srb T_Semicolon

    T_Semicolon  shift, and go to state 19
    T_Slb        shift, and go to state 20


State 12

    9 Variable: DataType . T_Identifier
   29 FnDef: DataType . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 21


State 13

    4 Decl: ClassDecl .

    $default  reduce using rule 4 (Decl)


State 14

    6 Decl: FnDecl .

    $default  reduce using rule 6 (Decl)


State 15

   18 FnDecl: FnDef . StmtBlock

    TCLB  shift, and go to state 22

    StmtBlock  go to state 23


State 16

   16 ClassDecl: T_Class T_Identifier . TCLB FieldList TCRB
   17          | T_Class T_Identifier . TCLB TCRB

    TCLB  shift, and go to state 24


State 17

    0 $accept: Program $end .

    $default  accept


State 18

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 19

    7 VarDecl: Variable T_Semicolon .

    $default  reduce using rule 7 (VarDecl)


State 20

    8 VarDecl: Variable T_Slb . T_IntConstant T_Srb T_Semicolon

    T_IntConstant  shift, and go to state 25


State 21

    9 Variable: DataType T_Identifier .
   29 FnDef: DataType T_Identifier . '(' Formals ')'

    '('  shift, and go to state 26

    $default  reduce using rule 9 (Variable)


State 22

   30 StmtBlock: TCLB . VarDeclList StmtList TCRB
   31          | TCLB . VarDeclList TCRB
   32          | TCLB . StmtList TCRB
   33          | TCLB . TCRB

    T_Void            shift, and go to state 1
    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 27
    T_While           shift, and go to state 28
    T_For             shift, and go to state 29
    T_If              shift, and go to state 30
    T_Return          shift, and go to state 31
    T_Break           shift, and go to state 32
    T_New             shift, and go to state 33
    T_Print           shift, and go to state 34
    T_Call            shift, and go to state 35
    TCLB              shift, and go to state 22
    TCRB              shift, and go to state 36
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46

    $default  reduce using rule 48 (OptExpr)

    VarDecl      go to state 47
    Variable     go to state 11
    DataType     go to state 48
    StmtBlock    go to state 49
    StmtList     go to state 50
    VarDeclList  go to state 51
    Stmt         go to state 52
    OptExpr      go to state 53
    IfStmt       go to state 54
    Expr         go to state 55
    Call         go to state 56
    LValue       go to state 57
    Constant     go to state 58


State 23

   18 FnDecl: FnDef StmtBlock .

    $default  reduce using rule 18 (FnDecl)


State 24

   16 ClassDecl: T_Class T_Identifier TCLB . FieldList TCRB
   17          | T_Class T_Identifier TCLB . TCRB

    T_Void            shift, and go to state 1
    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 27
    T_While           shift, and go to state 28
    T_For             shift, and go to state 29
    T_If              shift, and go to state 30
    T_Return          shift, and go to state 31
    T_Break           shift, and go to state 32
    T_New             shift, and go to state 33
    T_Print           shift, and go to state 34
    T_Call            shift, and go to state 35
    TCLB              shift, and go to state 22
    TCRB              shift, and go to state 59
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46

    $default  reduce using rule 48 (OptExpr)

    VarDecl    go to state 60
    Variable   go to state 11
    DataType   go to state 12
    FnDecl     go to state 61
    FieldList  go to state 62
    FnDef      go to state 15
    StmtBlock  go to state 49
    Stmt       go to state 63
    OptExpr    go to state 53
    IfStmt     go to state 54
    Expr       go to state 55
    Call       go to state 56
    LValue     go to state 57
    Constant   go to state 58


State 25

    8 VarDecl: Variable T_Slb T_IntConstant . T_Srb T_Semicolon

    T_Srb  shift, and go to state 64


State 26

   29 FnDef: DataType T_Identifier '(' . Formals ')'

    T_Void    shift, and go to state 1
    T_Bool    shift, and go to state 2
    T_Int     shift, and go to state 3
    T_Double  shift, and go to state 4
    T_String  shift, and go to state 5

    $default  reduce using rule 26 (Formals)

    Variable     go to state 65
    DataType     go to state 48
    Formals      go to state 66
    FormalsList  go to state 67


State 27

   99 Constant: T_Null .

    $default  reduce using rule 99 (Constant)


State 28

   39 Stmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 68


State 29

   44 Stmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  shift, and go to state 69


State 30

   49 IfStmt: T_If . '(' Expr ')' Stmt
   50       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 70


State 31

   40 Stmt: T_Return . ';'
   41     | T_Return . Expr ';'

    T_Null            shift, and go to state 27
    T_New             shift, and go to state 33
    T_Call            shift, and go to state 35
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    ';'               shift, and go to state 71
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46

    Expr      go to state 72
    Call      go to state 56
    LValue    go to state 57
    Constant  go to state 58


State 32

   42 Stmt: T_Break . ';'

    ';'  shift, and go to state 73


State 33

   81 Expr: T_New . NamedType

    T_Identifier  shift, and go to state 74

    NamedType  go to state 75


State 34

   43 Stmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 76


State 35

   84 Call: T_Call . T_Pl Expr callout_args T_Pr

    T_Pl  shift, and go to state 77


State 36

   33 StmtBlock: TCLB TCRB .

    $default  reduce using rule 33 (StmtBlock)


State 37

   98 Constant: T_StringConstant .

    $default  reduce using rule 98 (Constant)


State 38

   83 Call: T_Identifier . T_Pl Actuals T_Pr
   92 LValue: T_Identifier .

    T_Pl  shift, and go to state 78

    $default  reduce using rule 92 (LValue)


State 39

   95 Constant: T_IntConstant .

    $default  reduce using rule 95 (Constant)


State 40

   96 Constant: T_DoubleConstant .

    $default  reduce using rule 96 (Constant)


State 41

   97 Constant: T_BoolConstant .

    $default  reduce using rule 97 (Constant)


State 42

   75 Expr: '!' . Expr

    T_Null            shift, and go to state 27
    T_New             shift, and go to state 33
    T_Call            shift, and go to state 35
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46

    Expr      go to state 79
    Call      go to state 56
    LValue    go to state 57
    Constant  go to state 58


State 43

   76 Expr: '~' . Expr

    T_Null            shift, and go to state 27
    T_New             shift, and go to state 33
    T_Call            shift, and go to state 35
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46

    Expr      go to state 80
    Call      go to state 56
    LValue    go to state 57
    Constant  go to state 58


State 44

   79 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 27
    T_New             shift, and go to state 33
    T_Call            shift, and go to state 35
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46

    Expr      go to state 81
    Call      go to state 56
    LValue    go to state 57
    Constant  go to state 58


State 45

   74 Expr: '-' . Expr

    T_Null            shift, and go to state 27
    T_New             shift, and go to state 33
    T_Call            shift, and go to state 35
    T_StringConstant  shift, and go to state 37
    T_Identifier      shift, and go to state 38
    T_IntConstant     shift, and go to state 39
    T_DoubleConstant  shift, and go to state 40
    T_BoolConstant    shift, and go to state 41
    '!'               shift, and go to state 42
    '~'               shift, and go to state 43
    '('               shift, and go to state 44
    '-'               shift, and go to state 45
    '"'               shift, and go to state 46
